--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,28 @@
 Package: mvaplots
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Multiverse Analysis Visualization Plots
+Version: 0.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Yuanyuan", "Qu", email = "Yuanyuan.Qu@campus.lmu.de", role = c("aut", "cre"))
+Description: Provides functions to visualize multiverse analysis results. 
+    Includes a density plot comparing all vs. significant outcomes, heatmap strips 
+    showing analytical decisions, and a top-level function to combine both into 
+    one multiverse plot.
+License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/Yuanyuan0917/mvaplots
 BugReports: https://github.com/Yuanyuan0917/mvaplots/issues
+Imports:
+    ggplot2,
+    dplyr,
+    tidyr,
+    patchwork,
+    viridis,
+    rlang,
+    ggtext,
+    tibble,
+    data.table
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
