--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,32 @@ export(generate_density_plot)
 export(generate_heatmap_strips)
 export(plot_multiverse)
 export(prep_data)
+import(ggplot2)
 importFrom(data.table,":=")
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
+importFrom(dplyr,count)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
+importFrom(ggtext,element_markdown)
+importFrom(patchwork,wrap_plots)
+importFrom(rlang,sym)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,density)
 importFrom(stats,lm)
+importFrom(tibble,enframe)
+importFrom(tibble,tibble)
+importFrom(tidyr,complete)
 importFrom(utils,read.csv)
+importFrom(viridis,viridis)
