--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(dplyr,rowwise)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(ggtext,element_markdown)
+importFrom(magrittr,"%>%")
 importFrom(patchwork,wrap_plots)
 importFrom(rlang,sym)
 importFrom(stats,as.formula)
