--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,4 +33,4 @@ importFrom(tibble,enframe)
 importFrom(tibble,tibble)
 importFrom(tidyr,complete)
 importFrom(utils,read.csv)
-importFrom(viridis,viridis)
+importFrom(viridisLite,viridis)
