--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(plot_multiverse)
 export(prep_data)
 import(ggplot2)
 importFrom(data.table,":=")
-importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -33,4 +32,4 @@ importFrom(tibble,enframe)
 importFrom(tibble,tibble)
 importFrom(tidyr,complete)
 importFrom(utils,read.csv)
-importFrom(viridisLite,viridis)
+importFrom(viridis,viridis)
