--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ export(generate_density_plot)
 export(generate_heatmap_strips)
 export(plot_multiverse)
 export(prep_data)
-importFrom(dplyr,mutate)
-importFrom(magrittr,"%>%")
+import(dplyr)
+import(magrittr)
 importFrom(utils,read.csv)
